--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "build:doc:core": "typedoc --plugin typedoc-plugin-markdown --readme none --out docs/Documentation/core ../core/src/index.ts",
+    "build:doc:huid": "typedoc --plugin typedoc-plugin-markdown --readme none --out docs/Documentation/huid ../huid/src/index.ts",
+    "build:doc:state": "typedoc --plugin typedoc-plugin-markdown --readme none --out docs/Documentation/state ../state/src/index.ts",
+    "build:doc:context": "typedoc --plugin typedoc-plugin-markdown --readme none --out docs/Documentation/context ../context/src/index.ts",
+    "build:doc": "npm run build:doc:core && npm run build:doc:huid && npm run build:doc:state && npm run build:doc:context"
   },
   "dependencies": {
     "@docusaurus/core": "3.3.2",
@@ -27,6 +32,8 @@
     "@docusaurus/module-type-aliases": "3.3.2",
     "@docusaurus/tsconfig": "3.3.2",
     "@docusaurus/types": "3.3.2",
+    "typedoc": "^0.25.13",
+    "typedoc-plugin-markdown": "^4.0.2",
     "typescript": "~5.2.2"
   },
   "browserslist": {
