--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -15,3 +15,9 @@ slorber:
   title: Docusaurus maintainer
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
+
+guillaume:
+  name: Houthoofd Guillaume
+  title: Dev
+  url: https://sebastienlorber.com
+  image_url: https://avatars.githubusercontent.com/u/47045327?s=400&u=8addd8d8119e4de7b0c381595d61e794117ab060&v=4
