--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "build:doc": "npm run build:doc:core && npm run build:doc:huid && npm run build:doc:state && npm run build:doc:context"
   },
   "dependencies": {
+    "@codesandbox/sandpack-react": "^2.14.4",
     "@docusaurus/core": "3.3.2",
     "@docusaurus/preset-classic": "3.3.2",
+    "@lithium-framework/core": "^1.0.8-0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
@@ -32,6 +34,7 @@
     "@docusaurus/module-type-aliases": "3.3.2",
     "@docusaurus/tsconfig": "3.3.2",
     "@docusaurus/types": "3.3.2",
+    "react-full-screen": "^1.1.1",
     "typedoc": "^0.25.13",
     "typedoc-plugin-markdown": "^4.0.2",
     "typescript": "~5.2.2"
