--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@codesandbox/sandpack-react": "^2.14.4",
     "@docusaurus/core": "3.3.2",
     "@docusaurus/preset-classic": "3.3.2",
-    "@lithium-framework/core": "^1.0.8-0",
+    "@docusaurus/theme-live-codeblock": "^3.3.2",
+    "@lithium-framework/core": "latest",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
